fix overflow

--- a/src/components/Control/control.module.css
+++ b/src/components/Control/control.module.css
@@ -14,6 +14,7 @@
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
   margin-top: 1rem;
+  min-width: 0;
 }
 
 .remoteControlCasting {
@@ -41,7 +42,6 @@
 }
 
 .remoteControlCasting h3 {
-  margin: 0 0 0.25rem 0;
   display: flex;
   align-items: center;
   gap: 0.25rem;
